[gd_scene load_steps=33 format=2]

[ext_resource path="res://scenes/variations/0/Var0_0.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/pensatta-theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/img/TitleRect.png" type="Texture" id=3]
[ext_resource path="res://assets/font/Montserrat-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://TimeSprite.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/img/images/marco.png" type="Texture" id=6]
[ext_resource path="res://assets/img/images/Dulce.png" type="Texture" id=7]
[ext_resource path="res://assets/img/images/Rectangle 21.png" type="Texture" id=8]
[ext_resource path="res://assets/img/images/Ellipse 2.png" type="Texture" id=9]
[ext_resource path="res://assets/img/images/segundaBanda.png" type="Texture" id=10]
[ext_resource path="res://assets/img/images/Ellipse 4.png" type="Texture" id=11]
[ext_resource path="res://assets/img/images/Rectangle 18.png" type="Texture" id=12]
[ext_resource path="res://scenes/variations/0/KinematicBody2D.gd" type="Script" id=13]
[ext_resource path="res://assets/img/Question.png" type="Texture" id=14]
[ext_resource path="res://scenes/variations/0/Lector.gd" type="Script" id=15]
[ext_resource path="res://assets/img/images/Fondo.png" type="Texture" id=16]
[ext_resource path="res://assets/img/images/Fono Azul.png" type="Texture" id=17]
[ext_resource path="res://scenes/Draggable.tscn" type="PackedScene" id=18]
[ext_resource path="res://assets/img/images/Group.png" type="Texture" id=19]
[ext_resource path="res://assets/img/images/Bloque 2 (1).png" type="Texture" id=20]
[ext_resource path="res://assets/img/images/Bloque 3.png" type="Texture" id=21]
[ext_resource path="res://scenes/variations/0/KinematicBody2D2.gd" type="Script" id=22]
[ext_resource path="res://scenes/variations/0/Button.gd" type="Script" id=23]
[ext_resource path="res://assets/font/Montserrat-Medium.ttf" type="DynamicFontData" id=24]

[sub_resource type="DynamicFont" id=1]
size = 41
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 53.4216, 52.152 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 11.7752, 61.7921 )

[sub_resource type="DynamicFont" id=4]
size = 18
use_filter = true
font_data = ExtResource( 24 )

[sub_resource type="DynamicFont" id=5]
size = 18
use_filter = true
font_data = ExtResource( 24 )

[sub_resource type="DynamicFont" id=6]
size = 18
use_filter = true
font_data = ExtResource( 24 )

[sub_resource type="DynamicFont" id=7]
size = 18
use_filter = true
font_data = ExtResource( 24 )

[sub_resource type="DynamicFont" id=8]
size = 18
use_filter = true
font_data = ExtResource( 24 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="RectTitleSprite" type="Sprite" parent="."]
position = Vector2( 0, 40 )
texture = ExtResource( 3 )
centered = false

[node name="TitleLabel" type="Label" parent="RectTitleSprite"]
margin_left = 88.2626
margin_top = 7.93414
margin_right = 507.263
margin_bottom = 58.9341
custom_fonts/font = SubResource( 1 )
text = "TÃ­tulo del problema"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="."]
margin_left = 1014.0
margin_top = 794.0
margin_right = 1388.0
margin_bottom = 841.0
theme = ExtResource( 2 )
text = "SIGUIENTE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeSprite" parent="." instance=ExtResource( 5 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer"]
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="CanvasLayer/ParallaxBackground/ParallaxLayer"]
position = Vector2( 269.769, 361.2 )
scale = Vector2( 0.901112, 0.597123 )
texture = ExtResource( 17 )

[node name="bandaMovil" type="KinematicBody2D" parent="."]
visible = false
script = ExtResource( 22 )

[node name="SprBanda1" type="Sprite" parent="bandaMovil"]
position = Vector2( -488.227, 532.671 )
scale = Vector2( 6.79744, 1.72535 )
texture = ExtResource( 10 )

[node name="bandaMovil2" type="KinematicBody2D" parent="."]

[node name="SprBanda1" type="Sprite" parent="bandaMovil2"]
position = Vector2( -488.227, 532.671 )
scale = Vector2( 6.79744, 1.72535 )
texture = ExtResource( 10 )

[node name="Dulce" type="KinematicBody2D" parent="."]
visible = false
position = Vector2( 130, 459.594 )
script = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dulce"]
position = Vector2( 0, 6.67419 )
shape = SubResource( 2 )

[node name="SprDulces" type="Sprite" parent="Dulce"]
position = Vector2( 0.749146, 5.35434 )
texture = ExtResource( 7 )

[node name="Dulce2" type="KinematicBody2D" parent="."]
position = Vector2( 130, 459.594 )
__meta__ = {
"_edit_group_": true
}

[node name="SprDulces" type="Sprite" parent="Dulce2"]
position = Vector2( 0.749146, 5.35434 )
texture = ExtResource( 7 )

[node name="SprBanda2" type="Sprite" parent="."]
position = Vector2( 446.355, 512.187 )
scale = Vector2( 0.434241, 0.993259 )
texture = ExtResource( 12 )

[node name="SprBaseBanda" type="Sprite" parent="."]
position = Vector2( 268.011, 646.816 )
texture = ExtResource( 8 )

[node name="SprArea" type="Sprite" parent="."]
position = Vector2( 270.303, 453.337 )
scale = Vector2( 1.05965, 1.01175 )
texture = ExtResource( 6 )

[node name="SprRed" type="Sprite" parent="SprArea"]
visible = false
position = Vector2( 148, -230 )
texture = ExtResource( 11 )

[node name="SprGreen" type="Sprite" parent="SprArea"]
visible = false
position = Vector2( -149, -230 )
texture = ExtResource( 9 )

[node name="Lector" type="KinematicBody2D" parent="."]
visible = false
position = Vector2( 312.509, 168.416 )
script = ExtResource( 15 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Lector"]
position = Vector2( -42.0369, 3.30749 )
scale = Vector2( 0.718337, 0.0567972 )
texture = ExtResource( 14 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 486.301, 465.384 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 991.937, 452.548 )
texture = ExtResource( 16 )

[node name="Sprite" type="Sprite" parent="Sprite2"]
position = Vector2( -226.274, -206.475 )
texture = ExtResource( 19 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1213.23, 450.393 )
texture = ExtResource( 17 )

[node name="Draggable" parent="." instance=ExtResource( 18 )]
position = Vector2( 1208, 304 )

[node name="NinePatchRect" type="NinePatchRect" parent="Draggable"]
margin_left = -181.881
margin_top = -88.0486
margin_right = 189.119
margin_bottom = 78.9514
texture = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Draggable2" parent="." instance=ExtResource( 18 )]
position = Vector2( 1208, 480 )

[node name="NinePatchRect2" type="NinePatchRect" parent="Draggable2"]
margin_left = -160.756
margin_top = -26.5384
margin_right = 167.244
margin_bottom = 21.4616
texture = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Draggable2/NinePatchRect2"]
margin_left = 24.116
margin_top = 8.99817
margin_right = 143.116
margin_bottom = 31.9982
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0.423529, 0.556863, 1 )
text = "Mover banda"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Draggable3" parent="." instance=ExtResource( 18 )]
position = Vector2( 1208, 608 )

[node name="NinePatchRect" type="NinePatchRect" parent="Draggable3"]
margin_left = -162.1
margin_top = -32.521
margin_right = 165.9
margin_bottom = 15.479
texture = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Draggable3/NinePatchRect"]
margin_left = 24.0
margin_top = 8.0
margin_right = 107.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0.423529, 0.556863, 1 )
text = "Escanear"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SprBucle1" type="Sprite" parent="."]
visible = false
position = Vector2( 766.198, 334.728 )
scale = Vector2( 1, 0.676413 )
texture = ExtResource( 21 )

[node name="SpriteBucle1" type="Sprite" parent="."]
visible = false
position = Vector2( 781.906, 334.655 )
texture = ExtResource( 20 )

[node name="Label" type="Label" parent="SpriteBucle1"]
margin_left = -133.906
margin_top = -14.655
margin_right = -14.906
margin_bottom = 8.345
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0.423529, 0.556863, 1 )
text = "Mover banda"

[node name="SpriteBucle2" type="Sprite" parent="."]
visible = false
position = Vector2( 781.906, 334.655 )
texture = ExtResource( 20 )

[node name="Label" type="Label" parent="SpriteBucle2"]
margin_left = -133.906
margin_top = -14.655
margin_right = -14.906
margin_bottom = 8.345
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0.423529, 0.556863, 1 )
text = "Escanear"

[node name="Bucle2" type="NinePatchRect" parent="."]
visible = false
margin_left = 583.0
margin_top = 269.0
margin_right = 948.0
margin_bottom = 521.0
texture = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite3" type="Sprite" parent="."]
visible = false
position = Vector2( 783.6, 370.575 )
texture = ExtResource( 20 )

[node name="Label" type="Label" parent="Sprite3"]
margin_left = -143.6
margin_top = -10.575
margin_right = -60.6
margin_bottom = 12.425
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0.423529, 0.556863, 1 )
text = "Escanear"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite5" type="Sprite" parent="."]
visible = false
position = Vector2( 783.6, 370.575 )
texture = ExtResource( 20 )

[node name="Label" type="Label" parent="Sprite5"]
margin_left = -143.6
margin_top = -10.575
margin_right = -60.6
margin_bottom = 12.425
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0.423529, 0.556863, 1 )
text = "Mover banda"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite4" type="Sprite" parent="."]
visible = false
position = Vector2( 784.394, 420.693 )
texture = ExtResource( 20 )

[node name="Label" type="Label" parent="Sprite4"]
margin_left = -136.394
margin_top = -12.693
margin_right = -53.394
margin_bottom = 10.307
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0.423529, 0.556863, 1 )
text = "Escanear"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 767.48
margin_top = 771.718
margin_right = 896.48
margin_bottom = 844.718
text = "repetir"
script = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
